- Fix portfolio image cut off on mobile version

--- a/css/style.scss
+++ b/css/style.scss
@@ -234,8 +234,7 @@ body {
 		margin-bottom: 0 !important;
 		
 		figure {
-			width: 290px !important;
-			height: 300px !important;
+			max-width: 100% !important;
 			display: block !important;
 			margin: auto !important;
 			margin-bottom: 15px !important;
